// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progressbar component should match the snapshot 1`] = `
.c5 {
  position: absolute;
  display: none;
  border-radius: 3px;
  top: -50px;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  padding: 5px;
  text-align: center;
  font-size: 12px;
  white-space: nowrap;
  box-shadow: 0px 2px 7px;
}

.c5::after {
  content: ' ';
  position: absolute;
  top: 100%;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border: 2px solid black;
  border-width: 5px;
  border-color: transparent transparent transparent;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1:hover .c4 {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  border-radius: 5px;
  height: 10px;
}

.c3 {
  border-radius: 5px;
  max-width: 100%;
  width: 0;
  float: left;
  -webkit-transition: width ease;
  transition: width ease;
  width: 25% !important;
  height: 10px;
  background: yellow;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height={10}
    >
      <div
        className="c3"
        height={10}
      />
    </div>
    <p
      className="tooltip c4 c5"
    >
      25%
    </p>
  </div>
</div>
`;

exports[`Progressbar component should match the snapshot when using progress-gradient mode 1`] = `
.c5 {
  position: absolute;
  display: none;
  border-radius: 3px;
  top: -50px;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  padding: 5px;
  text-align: center;
  font-size: 12px;
  white-space: nowrap;
  box-shadow: 0px 2px 7px;
}

.c5::after {
  content: ' ';
  position: absolute;
  top: 100%;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border: 2px solid black;
  border-width: 5px;
  border-color: transparent transparent transparent;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1:hover .c4 {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  border-radius: 5px;
  height: 10px;
}

.c3 {
  border-radius: 5px;
  max-width: 100%;
  width: 0;
  float: left;
  -webkit-transition: width ease;
  transition: width ease;
  width: 70% !important;
  height: 10px;
  background: #C6D369;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height={10}
    >
      <div
        className="c3"
        height={10}
      />
    </div>
    <p
      className="tooltip c4 c5"
    >
      70%
    </p>
  </div>
</div>
`;

exports[`Progressbar component should match the snapshot when using time-tracking mode 1`] = `
.c6 {
  position: absolute;
  display: none;
  border-radius: 3px;
  top: -50px;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  padding: 5px;
  text-align: center;
  font-size: 12px;
  white-space: nowrap;
  box-shadow: 0px 2px 7px;
}

.c6::after {
  content: ' ';
  position: absolute;
  top: 100%;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border: 2px solid black;
  border-width: 5px;
  border-color: transparent transparent transparent;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1:hover .c5 {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  border-radius: 5px;
  height: 10px;
}

.c3 {
  border-radius: 5px;
  max-width: 100%;
  width: 0;
  float: left;
  -webkit-transition: width ease;
  transition: width ease;
  width: 76.92307692307693% !important;
  height: 10px;
  background: #C6D369;
}

.c4 {
  border-radius: 5px;
  max-width: 100%;
  width: 0;
  float: right;
  -webkit-transition: width ease;
  transition: width ease;
  width: 23.076923076923077% !important;
  height: 10px;
  background: #FF634D;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height={10}
    >
      <div
        className="c3"
        height={10}
      />
      <div
        className="c4"
        height={10}
      />
    </div>
    <p
      className="tooltip c5 c6"
    >
      130%
    </p>
  </div>
</div>
`;

exports[`Progressbar component should match the snapshot when using time-tracking mode 2`] = `
.c5 {
  position: absolute;
  display: none;
  border-radius: 3px;
  top: -50px;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  padding: 5px;
  text-align: center;
  font-size: 12px;
  white-space: nowrap;
  box-shadow: 0px 2px 7px;
}

.c5::after {
  content: ' ';
  position: absolute;
  top: 100%;
  left: 50%;
  width: auto;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border: 2px solid black;
  border-width: 5px;
  border-color: transparent transparent transparent;
}

.c1 {
  display: inline-block;
  position: relative;
}

.c1:hover .c4 {
  display: block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  border-radius: 5px;
  height: 10px;
}

.c3 {
  border-radius: 5px;
  max-width: 100%;
  width: 0;
  float: left;
  -webkit-transition: width ease;
  transition: width ease;
  width: 70% !important;
  height: 10px;
  background: #6CCA51;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      height={10}
    >
      <div
        className="c3"
        height={10}
      />
    </div>
    <p
      className="tooltip c4 c5"
    >
      70%
    </p>
  </div>
</div>
`;
